--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 GOOGLE_ID=313747753697-8abc6vrk8o0p1a93masru7s6gg9ke18m.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MOGNODB_LOCAL_URI=mongodb://127.0.0.1:27017/Retrovate-online-store
+MONGODB_LOCAL_URI=mongodb://127.0.0.1:27017/Retrovate-online-store
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=XOyXOOBsjA9eFlU6NIqG5+FkNPFTu/MHqizlfPvSll8=
 
 
-CLIENT_ID_TOKEN=bdc1a1c2a0bb4091bb8d73f137f1e0d6
-CLIENT_SECRET_TOKEN=da14b9de445945ae9d8ca0e29781a7c9
+CLIENT_ID_TOKEN=179735248603-tgi8bgtcb5dbdk5gn0aa4tlv7027eg63.apps.googleusercontent.com
+CLIENT_SECRET_TOKEN=5j5Is5RucPapd6-BHzLiARIt
