--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/material": "^5.15.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
+    "@mui/x-charts": "^6.18.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -29,6 +34,7 @@
     "react-hook-form": "^7.48.2",
     "react-use-cart": "^1.13.0",
     "serpapi": "^2.0.0",
+    "styled-components": "^6.1.2",
     "swiper": "^11.0.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
