--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -30,10 +31,13 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-use": "^17.4.2",
     "react-use-cart": "^1.13.0",
     "serpapi": "^2.0.0",
+    "stripe": "^14.11.0",
     "styled-components": "^6.1.2",
     "swiper": "^11.0.4",
     "tailwind-merge": "^2.0.0",
