--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.0-rc19",
     "lucide-react": "^0.292.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.1",
