--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@mui/x-charts": "^6.18.3",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
@@ -26,6 +27,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "embla-carousel-react": "^8.0.0-rc19",
+    "flag-icons": "^7.2.1",
     "lucide-react": "^0.292.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.1",
